Fix: Metadata bug fixes (#533)
* Fixes IE11 CSS issues
* Fixes text overflowing issues for templates
* Fixes collab issue of not being able to delete template
* Adds some missing unit tests

--- a/src/components/ContentSidebar/SidebarSection.scss
+++ b/src/components/ContentSidebar/SidebarSection.scss
@@ -11,6 +11,7 @@
 .be .btn-plain.bcs-section-title {
     align-items: center;
     border-bottom: 1px solid $off-white;
+    color: initial;
     display: flex;
     justify-content: space-between;
     padding: 5px 0 10px;
